--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4"
+        "php": ">=7.0"
     },
     "autoload": {
-        "psr-4": {"xiebruce\\": "src/"}
+        "psr-4": {"GetImgFromClipboard\\": "src/"}
     }
 }
