Updaate composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "xiediebruce@hotmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7.0"
     },
